# stl2dexel

./: CMakeLists.txt
app/: CMakeLists.txt
include/dexel/: dexel.hpp  dexel.tpp  geometry.hpp
src/: CMakeLists.txt  main.cpp
src/dexel/: CMakeLists.txt  dexel.hpp  dexel.tpp
tests/: CMakeLists.txt  test_main.cpp
